--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-22 12:08+0000\n"
-"PO-Revision-Date: 2022-09-22 12:08+0000\n"
+"POT-Creation-Date: 2022-10-10 12:40+0000\n"
+"PO-Revision-Date: 2022-10-10 12:40+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,7 @@ msgstr "'État de stock - %s' % (object.name)"
 msgid ""
 "<div style=\"margin: 0px; padding: 0px;\">\n"
 "                    <p style=\"margin: 0px; padding: 0px; font-size: 13px;\">\n"
-"                        Dear <t t-out=\"object.partner_id.name or ''\"/>,\n"
+"                        Dear,\n"
 "                        <br/>\n"
 "                        <br/>\n"
 "                        Your stock state is ready for review.\n"
@@ -96,10 +96,45 @@ msgid "AMOUNT"
 msgstr "MONTANT"
 
 #. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_needaction
+msgid "Action Needed"
+msgstr "Action requise"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__activity_ids
+msgid "Activities"
+msgstr "Activités"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__activity_exception_decoration
+msgid "Activity Exception Decoration"
+msgstr "Activité d'exception de décoration"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__activity_state
+msgid "Activity State"
+msgstr "Statut d'activité"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__activity_type_icon
+msgid "Activity Type Icon"
+msgstr "Icône de type d'activité"
+
+#. module: cgm_sale
 #: code:addons/cgm_sale/report/stock_state_report_xlsx.py:0
 #, python-format
 msgid "Amount Total"
 msgstr "Montant Total"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_attachment_count
+msgid "Attachment Count"
+msgstr "Nombre de pièces jointes"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__campaign_id
+msgid "Campaign"
+msgstr "Campagne"
 
 #. module: cgm_sale
 #: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__state__cancel
@@ -136,12 +171,6 @@ msgstr "Devise de la société"
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
 msgid "Confirm"
 msgstr "Confirmer"
-
-#. module: cgm_sale
-#: code:addons/cgm_sale/models/sale_order.py:0
-#, python-format
-msgid "Could not find exchange rate for today"
-msgstr "Impossible de trouver le taux de change du jour"
 
 #. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_move_report_search_view
@@ -197,6 +226,11 @@ msgid "Done"
 msgstr "Terminé"
 
 #. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "Download XLS"
+msgstr "Télécharger XLS"
+
+#. module: cgm_sale
 #: model:ir.model.fields.selection,name:cgm_sale.selection__product_move_report__state__draft
 #: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__state__draft
 msgid "Draft"
@@ -223,6 +257,21 @@ msgid "Expiration"
 msgstr "Échéance"
 
 #. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_follower_ids
+msgid "Followers"
+msgstr "Abonnés"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_partner_ids
+msgid "Followers (Partners)"
+msgstr "Abonnés (Partenaires)"
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__activity_type_icon
+msgid "Font awesome icon e.g. fa-tasks"
+msgstr "Icône Font Awesome e.g. fa-tasks"
+
+#. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
 msgid "Generate Quotations"
 msgstr "Générer les états de stock"
@@ -239,16 +288,48 @@ msgid "Group By"
 msgstr "Grouper par"
 
 #. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__has_message
+msgid "Has Message"
+msgstr "A un message"
+
+#. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_move_report__id
 msgid "ID"
 msgstr ""
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__activity_exception_icon
+msgid "Icon"
+msgstr "Icône"
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__activity_exception_icon
+msgid "Icon to indicate an exception activity."
+msgstr "Icône pour indiquer une activité d'exception."
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__message_needaction
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__message_unread
+msgid "If checked, new messages require your attention."
+msgstr "Si coché, de nouveaux messages nécessitent votre attention."
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__message_has_error
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__message_has_sms_error
+msgid "If checked, some messages have a delivery error."
+msgstr "Si actif, certains messages ont une erreur de livraison."
 
 #. module: cgm_sale
 #: code:addons/cgm_sale/models/sale_order_template.py:0
 #: code:addons/cgm_sale/report/stock_state_report_xlsx.py:0
 #, python-format
 msgid "Indefinite"
-msgstr "Non définie"
+msgstr "Indéfinie"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_is_follower
+msgid "Is Follower"
+msgstr "Est abonné"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_move_report____last_update
@@ -263,6 +344,31 @@ msgid "Licence"
 msgstr ""
 
 #. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_main_attachment_id
+msgid "Main Attachment"
+msgstr "Pièce jointe principale"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__medium_id
+msgid "Medium"
+msgstr "Moyen"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_has_error
+msgid "Message Delivery error"
+msgstr "Erreur d'envoi du message"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_ids
+msgid "Messages"
+msgstr ""
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__my_activity_date_deadline
+msgid "My Activity Deadline"
+msgstr "Échéance de mon activité"
+
+#. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_tree_inherit
 msgid "Name"
 msgstr "Nom"
@@ -272,6 +378,21 @@ msgstr "Nom"
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_move_report_search_view
 msgid "Nature"
 msgstr ""
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__activity_date_deadline
+msgid "Next Activity Deadline"
+msgstr "Date limite de l'Activité à Venir"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__activity_summary
+msgid "Next Activity Summary"
+msgstr "Résumé d'activité suivante"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__activity_type_id
+msgid "Next Activity Type"
+msgstr "Type d'activités à venir"
 
 #. module: cgm_sale
 #: code:addons/cgm_sale/models/sale_order_template.py:0
@@ -289,9 +410,34 @@ msgid "Number"
 msgstr "Numéro"
 
 #. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_needaction_counter
+msgid "Number of Actions"
+msgstr "Nombre d'actions"
+
+#. module: cgm_sale
 #: model:ir.model.fields,help:cgm_sale.field_sale_order_template__number_of_days
 msgid "Number of days for the validity date computation of the quotation"
 msgstr "Nombres de jours de validité calculé pour le devis"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_has_error_counter
+msgid "Number of errors"
+msgstr "Nombre d'erreurs"
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__message_needaction_counter
+msgid "Number of messages which requires an action"
+msgstr "Nombre de messages exigeant une action"
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__message_has_error_counter
+msgid "Number of messages with delivery error"
+msgstr "Nombre de messages avec des erreurs d'envoi"
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__message_unread_counter
+msgid "Number of unread messages"
+msgstr "Nombre de messages non lus"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_move_report__name
@@ -318,11 +464,6 @@ msgstr "Liste de prix"
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_search
 msgid "Pricelist"
 msgstr "Liste de prix"
-
-#. module: cgm_sale
-#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
-msgid "Print Quotations"
-msgstr "Imprimer les états de stock"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_move_report__product_id
@@ -446,6 +587,11 @@ msgid "Reset To Draft"
 msgstr "Remettre en brouillon"
 
 #. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__activity_user_id
+msgid "Responsible User"
+msgstr "Utilisateur Responsable"
+
+#. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.report_saleorder_document_inherit
 msgid ""
 "SKU\n"
@@ -458,6 +604,11 @@ msgstr ""
 #, python-format
 msgid "SKU CODE"
 msgstr ""
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_has_sms_error
+msgid "SMS Delivery error"
+msgstr "Erreur d'envoi SMS"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__sale_order_count
@@ -497,14 +648,20 @@ msgid "Search Quotation Template"
 msgstr ""
 
 #. module: cgm_sale
+#: model:ir.actions.server,name:cgm_sale.action_account_aml_to_asset
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
-msgid "Send Quotations"
-msgstr "Envoyer les états de stock"
+msgid "Send By Mail"
+msgstr "Envoyer par mail"
 
 #. module: cgm_sale
 #: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__state__sent
 msgid "Sent"
 msgstr "Envoyé"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__source_id
+msgid "Source"
+msgstr ""
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__state
@@ -519,6 +676,19 @@ msgid "Status"
 msgstr "Statut"
 
 #. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__activity_state
+msgid ""
+"Status based on activities\n"
+"Overdue: Due date is already passed\n"
+"Today: Activity date is today\n"
+"Planned: Future activities."
+msgstr ""
+"Statut basé sur les activités\n"
+"En retard : la date d'échéance est déjà dépassée\n"
+"Aujourd'hui : la date d'activité est aujourd'hui\n"
+"Planifiée : activités futures"
+
+#. module: cgm_sale
 #: model:ir.actions.report,name:cgm_sale.action_report_stock_state
 #: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__type__stock_state
 msgid "Stock State"
@@ -526,9 +696,7 @@ msgstr "État de stock"
 
 #. module: cgm_sale
 #: model:mail.template,report_name:cgm_sale.email_template_stock_state
-msgid ""
-"Stock State # {{(object.sale_order_template_id.name or "
-"'').replace('/','_')}}"
+msgid "Stock State # {{(object.name or '').replace('/','_')}}"
 msgstr ""
 "État de stock # {{(object.sale_order_template_id.name or "
 "'').replace('/','_')}}"
@@ -573,7 +741,9 @@ msgstr "Période de validité des stocks"
 #. module: cgm_sale
 #: model_terms:ir.actions.act_window,help:cgm_sale.product_move_report_act_window
 msgid "There is no examples click here to add new ModelTitle."
-msgstr "Il n'y a pas d'exemple. Cliquez ici pour ajouter un nouveau mouvement de produit"
+msgstr ""
+"Il n'y a pas d'exemple. Cliquez ici pour ajouter un nouveau mouvement de "
+"produit"
 
 #. module: cgm_sale
 #: code:addons/cgm_sale/models/sale_order_template.py:0
@@ -584,7 +754,6 @@ msgstr ""
 
 #. module: cgm_sale
 #: code:addons/cgm_sale/models/sale_order_template.py:0
-#: code:addons/cgm_sale/models/sale_order_template.py:0
 #, python-format
 msgid "There is no quotation generated for this stock state."
 msgstr "Il n'y a pas de Devis/BC généré pour cet état de stock."
@@ -594,6 +763,29 @@ msgstr "Il n'y a pas de Devis/BC généré pour cet état de stock."
 #, python-format
 msgid "There is no report"
 msgstr "Il n'y a pas de rapport d'état de stock."
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__campaign_id
+msgid ""
+"This is a name that helps you keep track of your different campaign efforts,"
+" e.g. Fall_Drive, Christmas_Special"
+msgstr ""
+"Ce nom vous aidera à suivre vos différentes campagnes marketing, p. ex. "
+"Campagne_automnale ou Spécial_Noël"
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__medium_id
+msgid "This is the method of delivery, e.g. Postcard, Email, or Banner Ad"
+msgstr "Le mode de livraison, p. ex. carte postale, e-mail ou bannière publicitaire"
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__source_id
+msgid ""
+"This is the source of the link, e.g. Search Engine, another domain, or name "
+"of email list"
+msgstr ""
+"La source du lien, p. ex. moteur de recherche, domaine externe ou nom de la "
+"liste d'adresses e-mail"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_line__image
@@ -618,6 +810,11 @@ msgid "Type"
 msgstr ""
 
 #. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__activity_exception_decoration
+msgid "Type of the exception activity on record."
+msgstr "Type d'activité d'exception enregistrée."
+
+#. module: cgm_sale
 #: code:addons/cgm_sale/report/stock_state_report_xlsx.py:0
 #, python-format
 msgid "UNIT PRICE"
@@ -636,8 +833,18 @@ msgstr ""
 
 #. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
-msgid "Unlink Lines With Qte <= 0"
-msgstr "Supprimer lignes Qté <= 0"
+msgid "Unlink Lines Qte <= 0"
+msgstr "Supprimer lignes à 0"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_unread
+msgid "Unread Messages"
+msgstr "Messages non lus"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_unread_counter
+msgid "Unread Messages Counter"
+msgstr "Compteur des messagnes non lus"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_move_report__price_subtotal
@@ -656,6 +863,16 @@ msgid "Warehouse"
 msgstr "Entrepôt"
 
 #. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__website_message_ids
+msgid "Website Messages"
+msgstr "Messages du site web"
+
+#. module: cgm_sale
+#: model:ir.model.fields,help:cgm_sale.field_sale_order_template__website_message_ids
+msgid "Website communication history"
+msgstr "Historique de communication du site web"
+
+#. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
 msgid "e.g. Stock State Guess 2022-07-25"
 msgstr "Exemple : État de stock GUESS 25/07/2022"
@@ -663,13 +880,8 @@ msgstr "Exemple : État de stock GUESS 25/07/2022"
 #. module: cgm_sale
 #: model:mail.template,subject:cgm_sale.email_template_stock_state
 msgid ""
-"{{ object.company_id.name }} Stock State (Ref {{ object.sale_order_template_id.name or 'n/a' }})\n"
+"{{ object.company_id.name }} Stock State (Ref {{ object.name or 'n/a' }})\n"
 "            "
 msgstr ""
 "{{ object.company_id.name }} État de stock (Ref {{ "
 "object.sale_order_template_id.name or 'n/a' }})\n"
-
-#. module: sale
-#: model:ir.model.fields,field_description:sale.field_sale_order__amount_total
-msgid "Total"
-msgstr "Total en devise"
