--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-10 12:40+0000\n"
-"PO-Revision-Date: 2022-10-10 12:40+0000\n"
+"POT-Creation-Date: 2022-10-11 07:54+0000\n"
+"PO-Revision-Date: 2022-10-11 07:54+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -324,7 +324,7 @@ msgstr "Si actif, certains messages ont une erreur de livraison."
 #: code:addons/cgm_sale/report/stock_state_report_xlsx.py:0
 #, python-format
 msgid "Indefinite"
-msgstr "Indéfinie"
+msgstr "Indéfini"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__message_is_follower
@@ -557,6 +557,11 @@ msgid "QUANTITY"
 msgstr "QUANTITÉ"
 
 #. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_line_view_tree
+msgid "Qty"
+msgstr "Qté."
+
+#. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__number_of_days
 msgid "Quotation Duration"
 msgstr "Durée du devis"
@@ -614,6 +619,13 @@ msgstr "Erreur d'envoi SMS"
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__sale_order_count
 msgid "Sale Order Count"
 msgstr "Nombre de devis/bons de commande"
+
+#. module: cgm_sale
+#: model:ir.actions.act_window,name:cgm_sale.sale_order_line_act_window_action
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_line_view_tree
+#: model:ir.ui.menu,name:cgm_sale.sale_order_lines_menu
+msgid "Sale Order Lines"
+msgstr "Lignes de commande client"
 
 #. module: cgm_sale
 #: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__type__sale_order_template
@@ -776,7 +788,8 @@ msgstr ""
 #. module: cgm_sale
 #: model:ir.model.fields,help:cgm_sale.field_sale_order_template__medium_id
 msgid "This is the method of delivery, e.g. Postcard, Email, or Banner Ad"
-msgstr "Le mode de livraison, p. ex. carte postale, e-mail ou bannière publicitaire"
+msgstr ""
+"Le mode de livraison, p. ex. carte postale, e-mail ou bannière publicitaire"
 
 #. module: cgm_sale
 #: model:ir.model.fields,help:cgm_sale.field_sale_order_template__source_id
@@ -801,6 +814,7 @@ msgstr "À approuver"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order__amount_total_in_currency
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_line_view_tree
 msgid "Total"
 msgstr ""
 
@@ -827,9 +841,11 @@ msgid ""
 "Unable to connect to the online exchange rate platform. The web service may "
 "be temporary down. Please try again in a moment."
 msgstr ""
-"Impossible de se connecter à la plate-forme de taux de change en ligne. Le "
-"service web est peut être temporairement hors service. Veuillez, s'il vous "
-"plaît, ré-essayer dans quelques minutes."
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_line_view_tree
+msgid "Unit of Measure"
+msgstr "Unité de mesure"
 
 #. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
