--- a/cgm-addons/cgm_stock/i18n/fr.po
+++ b/cgm-addons/cgm_stock/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-10 19:11+0000\n"
-"PO-Revision-Date: 2022-08-10 19:11+0000\n"
+"POT-Creation-Date: 2022-11-21 17:52+0000\n"
+"PO-Revision-Date: 2022-11-21 17:52+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 #. module: cgm_stock
 #: model_terms:ir.ui.view,arch_db:cgm_stock.report_picking_document_inherit
 msgid "<strong>SKU Code</strong>"
-msgstr "<strong>SKU Code</strong>"
+msgstr ""
 
 #. module: cgm_stock
 #: model_terms:ir.ui.view,arch_db:cgm_stock.report_delivery_document_inherit
@@ -27,6 +27,13 @@ msgid ""
 "                    <br/>\n"
 "                    Code"
 msgstr ""
-"SKU\n"
-"                    <br/>\n"
-"                    Code"
+
+#. module: cgm_stock
+#: model_terms:ir.ui.view,arch_db:cgm_stock.stock_picking_view_form_inherit
+msgid "Total Done Qty"
+msgstr "Total quantité fait"
+
+#. module: cgm_stock
+#: model_terms:ir.ui.view,arch_db:cgm_stock.stock_picking_view_form_inherit
+msgid "Total Ordered Qty"
+msgstr "Total quantité commandée"
