[IMPL] #CGM-29 : add total quantities in all documents

--- a/cgm-addons/cgm_purchase/i18n/fr.po
+++ b/cgm-addons/cgm_purchase/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-21 17:53+0000\n"
-"PO-Revision-Date: 2022-11-21 17:53+0000\n"
+"POT-Creation-Date: 2022-11-21 22:40+0000\n"
+"PO-Revision-Date: 2022-11-21 22:40+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -718,10 +718,22 @@ msgstr "Titre"
 
 #. module: cgm_purchase
 #: model:ir.model.fields,field_description:cgm_purchase.field_purchase_order__total_qty
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.purchase_order_kpis_view_tree_inherit
 #: model_terms:ir.ui.view,arch_db:cgm_purchase.purchase_order_line_view_tree
 #: model_terms:ir.ui.view,arch_db:cgm_purchase.purchase_order_view_form_inherit
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.purchase_order_view_tree_inherit
 msgid "Total Qty"
 msgstr "Quantité totale"
+
+#. module: cgm_purchase
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.purchase_order_view_form_inherit
+msgid "Total Qty Invoiced"
+msgstr "Total quantité facturée"
+
+#. module: cgm_purchase
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.purchase_order_view_form_inherit
+msgid "Total Qty Received"
+msgstr "Total quantité livrée"
 
 #. module: cgm_purchase
 #: model:ir.model.fields,help:cgm_purchase.field_need_mgmt_process__activity_exception_decoration
