--- a/cgm-addons/cgm_account/i18n/fr.po
+++ b/cgm-addons/cgm_account/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-21 22:43+0000\n"
-"PO-Revision-Date: 2022-11-21 22:43+0000\n"
+"POT-Creation-Date: 2022-12-07 15:19+0000\n"
+"PO-Revision-Date: 2022-12-07 15:19+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -26,6 +26,11 @@ msgstr "Compte fournisseur"
 #: model:ir.model.fields,field_description:cgm_account.field_res_users__property_account_receivable_id
 msgid "Account Receivable"
 msgstr "Compte client"
+
+#. module: cgm_account
+#: model_terms:ir.ui.view,arch_db:cgm_account.account_move_view_tree_inherit
+msgid "Amount Total In Currency"
+msgstr "Montant total en devise"
 
 #. module: cgm_account
 #: model:ir.model,name:cgm_account.model_res_partner
