--- a/cgm-addons/cgm_account/i18n/fr.po
+++ b/cgm-addons/cgm_account/i18n/fr.po
@@ -6,14 +6,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-07 15:19+0000\n"
-"PO-Revision-Date: 2022-12-07 15:19+0000\n"
+"POT-Creation-Date: 2022-12-21 13:23+0000\n"
+"PO-Revision-Date: 2022-12-21 13:23+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
+
+#. module: cgm_account
+#: model_terms:ir.ui.view,arch_db:cgm_account.cgm_report_invoice_document
+msgid "<strong>Bank account:</strong>"
+msgstr "<strong>Compte bancaire:</strong>"
 
 #. module: cgm_account
 #: model:ir.model.fields,field_description:cgm_account.field_res_partner__property_account_payable_id
