--- a/cgm-addons/cgm_account/i18n/fr.po
+++ b/cgm-addons/cgm_account/i18n/fr.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-12-21 13:23+0000\n"
-"PO-Revision-Date: 2022-12-21 13:23+0000\n"
+"PO-Revision-Date: 2023-01-12 07:33+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -54,6 +54,12 @@ msgid "EAN CODE"
 msgstr ""
 
 #. module: cgm_account
+#: model:ir.actions.act_window,name:cgm_account.action_account_move_line
+#: model:ir.ui.menu,name:cgm_account.menu_action_account_move_line
+msgid "Invoice Lines"
+msgstr "Lignes de facture"
+
+#. module: cgm_account
 #: model:ir.model,name:cgm_account.model_account_move
 msgid "Journal Entry"
 msgstr "Pièce comptable"
@@ -64,9 +70,19 @@ msgid "Name"
 msgstr "Nom"
 
 #. module: cgm_account
+#: model_terms:ir.ui.view,arch_db:cgm_account.view_move_line_tree
+msgid "Price"
+msgstr "Prix"
+
+#. module: cgm_account
 #: model_terms:ir.ui.view,arch_db:cgm_account.cgm_report_invoice_document
 msgid "SKU CODE"
 msgstr ""
+
+#. module: cgm_account
+#: model_terms:ir.ui.view,arch_db:cgm_account.view_move_line_tree
+msgid "Subtotal"
+msgstr "Sous-total"
 
 #. module: cgm_account
 #: model:ir.model.fields,help:cgm_account.field_res_partner__property_account_payable_id
