--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -953,3 +953,13 @@ msgid ""
 msgstr ""
 "{{ object.company_id.name }} État de stock (Ref {{ "
 "object.sale_order_template_id.name or 'n/a' }})\n"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_line__remaining_deliverables_dollars
+msgid "Remaining deliverables dollars"
+msgstr "Reste à livrer dollars"
+
+#. module: cgm_sale
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_line__remaining_deliverables_euros
+msgid "Remaining deliverables euros"
+msgstr "Reste à livrer euros"
